<resources>
    <string name="app_name">Travelogue</string>

    <string name="str_logout">Logout</string>

    <!-- Add New Trip fragment strings -->
    <string name="str_wohoo">Woot! Let\'s plan your next trip</string>
    <string name="str_trip_name">Trip name</string>
    <string name="str_trip_from">From</string>
    <string name="str_trip_to">To</string>
    <string name="str_add_users_title">Trip mates</string>
    <string name="str_add_users_hint">Friend\'s email</string>
    <string name="str_add_user">Add</string>
    <string name="str_solo_trip">Look\'s like you are travelling alone! Why don\'t you ask a few friends to join?</string>
    <string name="str_email_error">Please enter a valid email address</string>
    <string name="str_save_trip">Save Trip</string>
    <string name="str_required_field">This is a required field.</string>
    <string name="str_new_trip_created">Yay! %1$s has been successfully created.</string>
    <string name="str_user_already_exists">%1$s is already part of the trip.</string>
    <string name="str_no_user_found">Oops! We did not find anyone with the email - %1$s.</string>
    <string name="str_select_trip_location">Select a destination for your trip</string>

    <string name="str_trip_details">Details</string>

    <string name="str_day">Day - %1$s</string>

    <string name="str_no_trips">Oops! We did not find any trips for you.</string>

    <!-- Day Fragment Strings -->
    <string name="str_no_plans_yet">Looks like you have not yet planned anything for today!\n\n Start adding places you want to visit!</string>
    <string name="str_add">Add</string>
    <string name="str_clear">Clear</string>
    <string name="str_trip_day">Trip - Day %1$d</string>
    <string name="str_city_enter_hint">Enter the city/country you are visiting</string>
    <string name="str_place_hint">Tap to select a place</string>
    <string name="str_time_hint">Enter the time you are planning to visit (ex: 13:30)</string>

    <!-- Chat Activity Strings -->
    <string name="str_chat">Chat</string>
    <string name="str_say_something">Say something&#8230;</string>
    <string name="str_you">You, %1$s</string>
    <string name="str_other_sent">%1$s, %2$s</string>

    <!-- User Avatar Dialog Strings -->
    <string name="str_select_avatar">Select Your Avatar</string>
    <string name="str_save_avatar">Save</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_avatar_saved">Yay! Your avatar has been saved.</string>
    <string name="str_avatar_save_failed">Oops! We could not save your avatar. Please try again!</string>

    <!-- Home Activity Strings -->
    <string name="str_my_trips">My Trips</string>
    <string name="str_shared_trips">Shared Trips</string>
    <string name="str_delete_trip">Are you sure you want to delete %1$s trip?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>

    <!-- Itinerary PLanner strings -->
    <string name="str_itinerary_suggestions">Places you may like to visit&#8230;</string>
    <string name="str_error_fetching_suggestions">No suggestions found for %1$s. \nPlease enter a valid city or country.</string>
    <string name="str_select_valid_city">Please select a country or city.</string>
    <string name="str_delete_itinerary">Are you sure you want to cancel your visit to %1$s?</string>
    <string name="str_plan_a_visit">Plan a visit</string>
    <string name="str_visit_time">You plan to visit at %1$s</string>

    <!-- Network Change strings -->
    <string name="str_connectivity_lost">Network lost</string>
    <string name="str_connectivity_lost_message">Oops! Looks like you are not connected to the internet. Some of the app\'s functionality will be unavailable when you are offline.</string>
    <string name="str_ok">Ok</string>

    <!-- ANimation Strings -->
    <string name="str_transition_trip_image" translatable="false">transition:trip_image</string>
    <string name="str_transition_trip_name" translatable="false">transition:trip_name</string>
    <string name="str_transition_trip_loc" translatable="false">transition:trip_loc</string>

    <!-- Accessibility Support -->
    <string name="str_add_trip_fab">Add a trip</string>
    <string name="str_travelogue_icon">App icon</string>
    <string name="str_travelogue_name">App name</string>
    <string name="str_trip_image">A picture of the trip</string>
    <string name="str_user_avatar">User\'s avatar</string>
    <string name="str_chat_message_send">Send message</string>
    <string name="str_suggestion_item">A picture of a location</string>
</resources>
