<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_clear"
                    android:layout_gravity="end"
                    android:padding="10dp"
                    android:id="@+id/itinerary_dialog_close"/>
            </LinearLayout>

            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/place_edit_text"
                android:textSize="16sp"
                tools:text="Bell Tower, NC State"
                android:inputType="text"
                android:hint="@string/str_place_hint"
                android:textColorHint="@color/text_secondary"
                android:textColor="@color/text_secondary"
                android:focusable="false"
                android:enabled="false"
                android:nextFocusForward="@id/from_time_edit_text"
                android:nextFocusDown="@id/from_time_edit_text"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/from_time_edit_text"
                tools:text="24 March"
                android:textSize="16sp"
                android:inputType="time"
                android:hint="@string/str_time_hint"
                android:textColorHint="@color/text_secondary"
                android:textColor="@color/text_secondary"
                android:focusable="false"
                android:enabled="false"
                android:nextFocusForward="@id/add_itinerary_button"
                android:nextFocusUp="@id/place_edit_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_itinerary_button"
                    android:text="@string/str_add"
                    android:textColor="@color/colorPrimary"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:nextFocusRight="@id/clear_itinerary_button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/clear_itinerary_button"
                    android:text="@string/str_clear"
                    android:textColor="@color/colorPrimary"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:textAllCaps="true"/>

            </LinearLayout>

        </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/suggestions_layout"
        android:layout_gravity="bottom|end"
        android:visibility="gone"
        android:background="#EFEFEF">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:elevation="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_itinerary_suggestions"
                android:textSize="24sp"
                android:textColor="@color/text_primary"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/suggestion_recycler_view"
                    android:scrollbars="horizontal"
                    android:layout_marginStart="16dp"/>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/suggestions_progress_bar"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </FrameLayout>

</FrameLayout>